--- a/package.json
+++ b/package.json
@@ -2,27 +2,22 @@
   "name": "starter",
   "version": "0.2.1",
   "private": true,
-
   "author": "L is B corp.",
-
   "keywords": [
     "hubot",
     "direct",
     "bot",
     "daab"
   ],
-
   "description": "A simple helpful robot for your Company",
-
   "dependencies": {
-    "office-js": "https://direct4b.com/ja/bot/dev/modules/office-js.tgz",
-    "hubot":         "https://direct4b.com/ja/bot/dev/modules/hubot.tgz",
+    "forever": "^0.15.3",
     "hubot-scripts": ">= 2.5.7 < 3.0.0",
-    "forever": "0.13.0"
+    "lisb-hubot": "^2.19.2",
+    "office-js": "^0.1.0"
   },
-
   "engines": {
     "node": ">= 0.8.x",
-    "npm":  ">= 1.1.x"
+    "npm": ">= 1.1.x"
   }
 }
